# esp32-tests

./: .gitignore  CMakeLists.txt  README.md  install.sh  sdkconfig  sdkconfig.defaults  setup.sh
FuelGauge/: battery_monitor  install.sh
Python_Module/: AUTHORS  ChangeLog  requirements.txt  setup.cfg
components/SCServo_esp32/: CMakeLists.txt
components/SCServo_esp32/include/: SCSCL.h  SCSerial.h
components/SCServo_esp32/src/: SCS.cpp  SMS_STS.cpp
demo/: hapic-demo.py
demos/: README.md  mpl_plotter.py  python_api_setpos.py  quaternion_plotter.py  requirements.txt
esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  Kconfig.projbuild  imu_cmd.cpp  imu_cmd.h  madgwickFilter.cpp  madgwickFilter.h  mini_pupper_app.cpp  mini_pupper_cmd.cpp  mini_pupper_host.cpp  mini_pupper_host.h  mini_pupper_host_base.h  mini_pupper_imu.cpp  mini_pupper_imu.h  mini_pupper_imu_filter.cpp  mini_pupper_imu_filter.h  mini_pupper_power.cpp  mini_pupper_protocol.h  mini_pupper_servos.cpp  mini_pupper_servos.h  mini_pupper_stats.h  mini_pupper_taskes.h  protocolfunctions.cpp  protocolfunctions.h  servo-test.cpp  servo_cmd.cpp  vector_type.cpp  vector_type.h
esp32_protocol/: client_setpos.py  connection.h  esp32-proxy.cpp  esp32-server.cpp  make.sh  mini_pupper_host_base.h  uart.c  uart.h
esp32_proxy/: Makefile  client_getimu.py  client_getimu_quaternions.py  client_getload.py  client_getpos.py  client_getpower.py  client_setpos.py  connection.h  esp32-proxy.cpp  esp32-proxy.h  mini_pupper_host_base.h
gdb/: hdumcke.cfg
main/: CMakeLists.txt  Kconfig.projbuild  QMI8658C.cpp  QMI8658C.h  imu_cmd.cpp  mini_pupper_servos.cpp  servo-test.cpp  (+9 more)
(+32 files in other folders)
