idf_component_register(SRCS "servo-test.cpp"
                            "mini_pupper_servos.cpp"
                            "mini_pupper_host.cpp"
			    "QMI8658C.cpp"
			    "servo_cmd.cpp"
			    "imu_cmd.cpp"
			    "quaternion_type.cpp"
			    "vector_type.cpp"
                    INCLUDE_DIRS ".")
