idf_component_register(SRCS "mini_pupper_app.cpp"
                            "mini_pupper_power.cpp"
                            "mini_pupper_servos.cpp"
                            "mini_pupper_host.cpp"
			    "mini_pupper_imu.cpp"
			    "mini_pupper_cmd.cpp"
			    "imu_cmd.cpp"
			    "madgwickFilter.cpp"
                    INCLUDE_DIRS ".")
